--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.android.gms:play-services-ads:11.8.0'
+
+    //recyclerview
+    implementation 'com.mikepenz:fastadapter:3.2.4@aar'
+
+    implementation  'com.android.support:recyclerview-v7:27.1.0'
+
 }
