--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,17 @@ dependencies {
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.android.gms:play-services-ads:11.8.0'
 
-    //recyclerview
-    implementation 'com.mikepenz:fastadapter:3.2.4@aar'
+
+
 
     implementation  'com.android.support:recyclerview-v7:27.1.0'
+
+    //fast networking
+    compile 'com.amitshekhar.android:jackson-android-networking:1.0.1'
+
+    //songCache
+    implementation 'com.danikula:videocache:2.7.0'
+
+
 
 }
