--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:11.8.0'
 
 
+    //imageloading
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
 
     implementation  'com.android.support:recyclerview-v7:27.1.0'
