--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,9 @@ dependencies {
     implementation 'com.danikula:videocache:2.7.0'
 
 
+    //ads
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
+
+
 
 }
