--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ buildscript {
 allprojects {
     repositories {
         mavenCentral()
+        maven {
+            url "https://maven.google.com"
+        }
         google()
         jcenter()
     }
