--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,24 +36,24 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.android.volley:volley:1.1.0'
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.android.gms:play-services-ads:12.0.0'
 
     //imageloading
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:implementationr:4.6.1'
 
 
     implementation 'com.android.support:recyclerview-v7:27.1.0'
 
     //fast networking
-    compile 'com.amitshekhar.android:jackson-android-networking:1.0.1'
+    implementation 'com.amitshekhar.android:jackson-android-networking:1.0.1'
 
     //songCache
     implementation 'com.danikula:videocache:2.7.0'
 
     //ads
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-ads:12.0.0'
 
 
 }
