--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     //imageloading
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-    annotationProcessor 'com.github.bumptech.glide:implementationr:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
 
     implementation 'com.android.support:recyclerview-v7:27.1.0'
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.danikula:videocache:2.7.0'
 
     //ads
-    implementation 'com.google.android.gms:play-services-ads:12.0.0'
+    //implementation 'com.google.android.gms:play-services-ads:12.0.0'
 
 
 }
