--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -52,6 +53,9 @@ dependencies {
     //songCache
     implementation 'com.danikula:videocache:2.7.0'
 
+    implementation ('com.mopub:mopub-sdk:4.16.0@aar') {
+        transitive = true
+    }
     //ads
     //implementation 'com.google.android.gms:play-services-ads:12.0.0'
 
