--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,11 @@ allprojects {
             url "https://maven.google.com"
 
         }
+        jcenter() // includes the MoPub SDK and AVID library
+        maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
 
         google()
-        jcenter()
+
 
     }
 }
