--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -38,7 +38,7 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.google.android.gms:play-services-ads:12.0.0'
+    implementation 'com.google.android.gms:play-services-ads:12.0.1'
 
     //imageloading
     implementation 'com.github.bumptech.glide:glide:4.6.1'
@@ -53,11 +53,10 @@ dependencies {
     //songCache
     implementation 'com.danikula:videocache:2.7.0'
 
-    implementation ('com.mopub:mopub-sdk:4.16.0@aar') {
-        transitive = true
-    }
-    //ads
-    //implementation 'com.google.android.gms:play-services-ads:12.0.0'
+    implementation 'com.inmobi.monetization:inmobi-ads:7.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
+
+
 
 
 }
