--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
 
+    //toggle
+    implementation 'info.hoang8f:android-segmented:1.0.6'
     //imageloading
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
