--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,11 @@
             android:resizeableActivity="false"
             android:theme="@android:style/Theme.NoTitleBar"
             tools:ignore="UnusedAttribute" />
-
+<!--fabrics-->
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="e52ee8ae31cd1341706602670106cddbf6cdd286"
+            />
     </application>
 
 </manifest>
