--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,18 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
+        buildscript {
+            maven { url 'https://maven.fabric.io/public' }
+
+            dependencies {
+                // These docs use an open ended version so that our plugin
+                // can be updated quickly in response to Android tooling updates
+
+                // We recommend changing it to the latest version from our changelog:
+                // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
+                classpath 'io.fabric.tools:gradle:1.+'
+            }
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -14,6 +26,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.2.0'
+
+        classpath 'io.fabric.tools:gradle:1.1.0'
     }
 }
 
