--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,15 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 android {
+    signingConfigs {
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "in.beyonitysoftwares.besttamilsongs"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 2
-        versionName "1.0.b"
+        versionCode 3
+        versionName "1.1.b"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -22,11 +24,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
@@ -42,36 +47,26 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:15.0.0'
     implementation 'com.google.android.gms:play-services-auth:15.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
-
     //toggle
     implementation 'info.hoang8f:android-segmented:1.0.6'
     //imageloading
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
-
-
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
     //fast networking
     implementation 'com.amitshekhar.android:jackson-android-networking:1.0.1'
-
     //songCache
     implementation 'com.danikula:videocache:2.7.0'
-
     implementation 'com.inmobi.monetization:inmobi-ads:7.0.2'
     implementation 'com.android.support:multidex:1.0.3'
-
     //fabrics
-
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
         transitive = true;
     }
-
 }
 apply plugin: 'com.google.gms.google-services'
