gradient bug fixed isplaying bug fixed repeated values in spinner bug fixed and other minor bug fixed now libary and its list were fully sorted added song playback notification almost completed everything except request list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,15 @@
 
     <!-- Optional permissions. Will pass Lat/Lon values when available. Choose either Coarse or Fine -->
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.INTERNET"> </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
 
     <!-- Optional permissions. Used for MRAID 2.0 storePicture ads -->
 
