--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.25.3'
+    }
+}
 apply plugin: 'com.android.application'
 
 apply plugin: 'io.fabric'
@@ -9,9 +18,9 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "in.beyonitysoftwares.besttamilsongs"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 27
-        versionCode 4
+        versionCode 5
         versionName "1.2.b"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -51,7 +60,7 @@ dependencies {
 
     //toggle
     implementation 'info.hoang8f:android-segmented:1.0.6'
-    //imageloading
+    //image loading
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
@@ -70,6 +79,9 @@ dependencies {
     //fabrics
 
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
+        transitive = true;
+    }
+    implementation('com.crashlytics.sdk.android:answers:1.4.1@aar') {
         transitive = true;
     }
 
